--- a/nagornyy-theme/templates/base.html
+++ b/nagornyy-theme/templates/base.html
@@ -11,7 +11,7 @@
 	<meta name="google-site-verification" content="{{ GOOGLE_SITE_VERIFICATION }}">
 	{% endif %}
 
- {% assets filters="sass,cssmin", output="css/style.min.css", "bulma/bulma.sass" %}
+ {% assets filters="sass,cssmin", output="css/style.min.css", "sass/styles.sass" %}
 		<link rel="stylesheet" href="{{ SITEURL }}/{{ ASSET_URL }}">
 {% endassets %}
 
