--- a/nagornyy-theme/templates/article.html
+++ b/nagornyy-theme/templates/article.html
@@ -2,7 +2,9 @@
 {% block title %}{{ article.title }}{% endblock %}
 
 {% block head %}
+		{% if not article.without_css %}
 		{{ super() }}
+		{% endif %}
 
 		<link href="{{ SITEURL }}/{{ article.url }}" rel="canonical" />
 		{% for keyword in article.keywords %}
@@ -89,13 +91,6 @@
 {% endblock %}
 
 {% block header %}
-		<!-- Progressbar -->
-		<div class="progress-container">
-				<span class="progress-bar"></span>
-		</div>
-
-		<!-- Page Header -->
-		<!-- Set your background image for this header on the line below. -->
 		<header id="post-header" class="has-cover">
 			<div class="inner">
 				<nav id="navigation">
@@ -145,24 +140,25 @@
 		<!-- Post content -->
 		<main class="content" role="main">
 				<article class="post">
+					<nav class="breadcrumb">
+						<ol>
+							<li>
+								<a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category}}</a>
+							</li>
+						{% for subcategory in article.subcategories %}
+							<li>
+								<a href="{{ SITEURL }}/{{ subcategory.url }}">{{ subcategory.shortname }}</a>
+							</li>
+						{% endfor %}
+						</ol>
+					</nav>
 				<div class="inner">
 						<section class="post-content">
 								{{article.content}}
 						</section>
 
 						<section class="post-info">
-								<div class="post-share">
-										<a class="twitter" href="https://twitter.com/share?text={{ article.title }}&amp;url={{ SITEURL }}/{{ article.url }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-										<i class="ic ic-twitter"></i><span class="hidden">Twitter</span>
-										</a>
-										<a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ SITEURL }}/{{ article.url }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-										<i class="ic ic-facebook"></i><span class="hidden">Facebook</span>
-										</a>
-										<a class="googleplus" href="https://plus.google.com/share?url={{ SITEURL }}/{{ article.url }}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
-										<i class="ic ic-googleplus"></i><span class="hidden">Google+</span>
-										</a>
-										<div class="clear"></div>
-								</div>
+
 
 								{% if article.tags %}
 								<aside class="tags">
@@ -170,7 +166,6 @@
 								</aside>
 								{% endif %}
 
-								<div class="clear"></div>
 
 								{% for author in article.authors %}
 								{% if AUTHORS_BIO and author.name.lower() in AUTHORS_BIO %}
