--- a/nagornyy-theme/templates/subcategory.html
+++ b/nagornyy-theme/templates/subcategory.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ SITENAME }} - Articles in the {{ category }} category{% endblock %}
+{% block title %}{{ SITENAME }} - Articles in the {{ subcategory }} subcategory{% endblock %}
 
 {% block header %}
     <!-- Page Header -->
@@ -21,7 +21,7 @@
             <a class="menu-button"><i class="ic ic-menu"></i> Menu</a>
           </span>
         </nav>
-        <h1 class="post-title">Category {{ category }}</h1>
+        <h1 class="post-title">Subcategory {{ subcategory }}</h1>
         <span class="blog-description">Posts: {{ articles|count }}</span>
         {% if HEADER_COVER %}
             <div class="blog-cover cover" style="background-image: url('{{ HEADER_COVER }}')">            
