--- a/nagornyy-theme/templates/article.html
+++ b/nagornyy-theme/templates/article.html
@@ -91,46 +91,17 @@
 {% endblock %}
 
 {% block header %}
-		<header id="post-header" class="has-cover">
-			<div class="inner">
-				<nav id="navigation">
-					{% if SITE_LOGO %}
-						<span class="blog-logo">
-								<a href="{{ SITEURL }}"><img src="{{SITE_LOGO}}" alt="Blog Logo" /></a>
-						</span>
-					{% else %}
-						<span id="home-button" class="nav-button">
-								<a class="home-button" href="{{ SITEURL }}" title="Home"><i class="ic ic-arrow-left"></i> Home</a>
-						</span>
-					{% endif %}
-					<span id="menu-button" class="nav-button">
-						<a class="menu-button"><i class="ic ic-menu"></i> Menu</a>
-					</span>
-				</nav>
-				<h1 class="post-title">{{ article.title }}</h1>
-				<!-- TODO : Proper class for headline -->
-				{% if article.headline %}
-						<span class="blog-description">{{ article.headline }}</h3>
-				{% endif %}
-				<span class="post-meta">
+		<header id="post-header">
+			<div class="content">
+				<div class="columns">
+					<div class="column is-8 is-offset-2">
+						<h1 class="title">{{article.title}}</h1>
 						{% for author in article.authors %}
-								<a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
+							<small><a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a></small>
 						{% endfor %}
-						| <time datetime="{{ article.locale_date }}">{{ article.locale_date }}</time>
-				</span>
-				<!-- TODO : Modified check -->
-				{% if article.modified %}
-						<span class="post-meta"> | Updated on {{ article.locale_modified }}</span>
-				{% endif %}				
-				{% if article.header_cover %}
-						<div class="post-cover cover" style="background-image: url('{{ article.header_cover }}')">
-				{% elif HEADER_COVER %}
-						<div class="post-cover cover" style="background-image: url('{{ HEADER_COVER }}')">						
-				{% elif HEADER_COLOR %}
-						<div class="post-cover cover" style="background-color: {{ HEADER_COLOR }}">
-				{% else %}
-						<div class="post-cover cover" style="background-image: url('{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/post-bg.jpg')">
-				{% endif %}				
+						<small><time datetime="{{ article.locale_date }}">{{ article.locale_date }}</time></small>
+					</div>
+				</div>
 			</div>
 		</header>		
 {% endblock header %}
@@ -139,112 +110,72 @@
 
 		<!-- Post content -->
 		<main class="content" role="main">
-				<article class="post">
-					<nav class="breadcrumb">
-						<ol>
-							<li>
-								<a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category}}</a>
-							</li>
-						{% for subcategory in article.subcategories %}
-							<li>
-								<a href="{{ SITEURL }}/{{ subcategory.url }}">{{ subcategory.shortname }}</a>
-							</li>
-						{% endfor %}
-						</ol>
-					</nav>
-				<div class="inner">
-						<section class="post-content">
-								{{article.content}}
+				<div class="columns">
+					<div class="column is-8 is-offset-2">
+<!-- 						{% if article.summary %}
+						<section class="summary">
+							<strong>{{ article.summary }}</strong>
 						</section>
-
+						{% endif %} -->
+						<section class="article">
+							{{article.content}}
+						</section>
+						<br>
 						<section class="post-info">
-
-
-								{% if article.tags %}
-								<aside class="tags">
-										{% for tag in article.tags %}<a class="tag" href="{{ SITEURL }}/{{ tag.url }}">{{ tag | escape }}</a>{% if not loop.last %}{% endif %}{% endfor %}
-								</aside>
-								{% endif %}
-
-
-								{% for author in article.authors %}
-								{% if AUTHORS_BIO and author.name.lower() in AUTHORS_BIO %}
-								<aside class="post-author">
-										{% if AUTHORS_BIO[author.name.lower()].image %}
-												<figure class="post-author-avatar">
-														<img src="{{AUTHORS_BIO[author.name.lower()].image}}" alt="{{author.name | capitalize}}" />
-												</figure>
+							{% if article.tags %}
+							<div class="tags">
+									{% for tag in article.tags %}
+									<a class="tag" href="{{ SITEURL }}/{{ tag.url }}">{{ tag | escape }}</a>
+										{% if not loop.last %}
 										{% endif %}
-										<div class="post-author-bio">
-												<h4 class="post-author-name"><a href="{{ SITEURL }}/{{author.url}}">{{author.name | capitalize}}</a></h4>
-												{% if AUTHORS_BIO[author.name.lower()].bio %}
-														<p class="post-author-about">{{AUTHORS_BIO[author.name.lower()].bio}}</p>
-												{% endif %}
-												{% if AUTHORS_BIO[author.name.lower()].location %}
-														<span class="post-author-location"><i class="ic ic-location"></i> {{AUTHORS_BIO[author.name.lower()].location}}</span>
-												{% endif %}
-												{% if AUTHORS_BIO[author.name.lower()].website %}
-														<span class="post-author-website"><a href="{{AUTHORS_BIO[author.name.lower()].website}}"><i class="ic ic-link"></i> Website</a></span>
-												{% endif %}
-												{% if AUTHORS_BIO[author.name.lower()].twitter %}
-														<span class="post-author-twitter"><a target="_blank" href="https://twitter.com/{{AUTHORS_BIO[author.name.lower()].twitter}}"><i class="ic ic-twitter"></i> Twitter</a></span>
-												{% endif %}
-												{% if AUTHORS_BIO[author.name.lower()].facebook %}
-														<span class="post-author-facebook"><a target="_blank" href="https://facebook.com/{{AUTHORS_BIO[author.name.lower()].facebook}}"><i class="ic ic-facebook"></i> Facebook</a></span>
-												{% endif %}
-										</div>
-										<div class="clear"></div>
-								</aside>
-								{% endif %} 
-								{% endfor %}
+									{% endfor %}
+							</div>
+							{% endif %}
 
-								</section>
+							{% if DISQUS_SITENAME and SITEURL and article.status != "draft" %}
+							<script type="text/javascript">
+									var disqus = '{{ DISQUS_SITENAME }}';
+									var disqus_shortname = '{{ DISQUS_SITENAME }}';
+									{% if article.disqus_identifier %}
+									var disqus_identifier = '{{ article.disqus_identifier }}';
+									{% else %}
+									var disqus_identifier = '/{{ article.url }}';
+									{% endif %}
+									var disqus_url = '{{ SITEURL }}/{{ article.url }}';
+							</script>
+							<noscript>Please enable JavaScript to view the comments.</noscript>									
+							<section class="post-comments">
+									{% if article.disqus_identifier %}
+											<a id="show-disqus" class="post-comments-activate" data-disqus-identifier="{{ article.disqus_identifier }}" >Show Comments</a>
+									{% else %}
+											<a id="show-disqus" class="post-comments-activate" data-disqus-identifier="/{{ article.url }}" >Show Comments</a>
+									{% endif %}
+									<div id="disqus_thread"></div>									
+							</section>
+							{% endif %}
 
-								{% if DISQUS_SITENAME and SITEURL and article.status != "draft" %}
-								<script type="text/javascript">
-										var disqus = '{{ DISQUS_SITENAME }}';
-										var disqus_shortname = '{{ DISQUS_SITENAME }}';
-										{% if article.disqus_identifier %}
-										var disqus_identifier = '{{ article.disqus_identifier }}';
-										{% else %}
-										var disqus_identifier = '/{{ article.url }}';
-										{% endif %}
-										var disqus_url = '{{ SITEURL }}/{{ article.url }}';
-								</script>
-								<noscript>Please enable JavaScript to view the comments.</noscript>									
-								<section class="post-comments">
-										{% if article.disqus_identifier %}
-												<a id="show-disqus" class="post-comments-activate" data-disqus-identifier="{{ article.disqus_identifier }}" >Show Comments</a>
-										{% else %}
-												<a id="show-disqus" class="post-comments-activate" data-disqus-identifier="/{{ article.url }}" >Show Comments</a>
-										{% endif %}
-										<div id="disqus_thread"></div>									
-								</section>
-								{% endif %}
-
-								<aside class="post-nav">
-										{% if article.next_article %}
-										<a class="post-nav-next" href="{{ SITEURL }}/{{ article.next_article.url}}">
-												<section class="post-nav-teaser">
-														<i class="ic ic-arrow-left"></i>
-																<h2 class="post-nav-title">{{ article.next_article.title }}</h2>
-														<p class="post-nav-excerpt">{{ article.next_article.summary|striptags|truncate(90) }}</p>
-												</section>
-										</a>
-										{% endif %}
-										{% if article.prev_article %}
-										<a class="post-nav-prev" href="{{ SITEURL }}/{{ article.prev_article.url}}">
-												<section class="post-nav-teaser">
-														<i class="ic ic-arrow-right"></i>
-																<h2 class="post-nav-title">{{ article.prev_article.title }}</h2>
-														<p class="post-nav-excerpt">{{ article.prev_article.summary|striptags|truncate(90) }}</p>
-												</section>
-										</a>
-										{% endif %}
-										<div class="clear"></div>
-								</aside>
-
-						</div>
-				</article>
+							<aside class="post-nav">
+									{% if article.next_article %}
+									<a class="post-nav-next" href="{{ SITEURL }}/{{ article.next_article.url}}">
+											<section class="post-nav-teaser">
+													<i class="ic ic-arrow-left"></i>
+															<h2 class="post-nav-title">{{ article.next_article.title }}</h2>
+													<p class="post-nav-excerpt">{{ article.next_article.summary|striptags|truncate(90) }}</p>
+											</section>
+									</a>
+									{% endif %}
+									{% if article.prev_article %}
+									<a class="post-nav-prev" href="{{ SITEURL }}/{{ article.prev_article.url}}">
+											<section class="post-nav-teaser">
+													<i class="ic ic-arrow-right"></i>
+															<h2 class="post-nav-title">{{ article.prev_article.title }}</h2>
+													<p class="post-nav-excerpt">{{ article.prev_article.summary|striptags|truncate(90) }}</p>
+											</section>
+									</a>
+									{% endif %}
+							</aside>
+						</section>
+					</div>
+				</div>
 		</main>
 {% endblock content %}
