--- a/nagornyy-theme/templates/index.html
+++ b/nagornyy-theme/templates/index.html
@@ -13,10 +13,7 @@
 
 			<div id="navbarExampleTransparentExample" class="navbar-menu">
 				<div class="navbar-end">
-					<a class="navbar-item" href="/papers">
-						Projects
-					</a>
-					<a class="navbar-item" href="/blog">
+					<a class="navbar-item" href="/category/posts">
 						Blog
 					</a>
 					<a class="navbar-item" href="#contacts">
