--- a/nagornyy-theme/templates/partials/loop.html
+++ b/nagornyy-theme/templates/partials/loop.html
@@ -1,18 +1,20 @@
+<div class="content">
+    <div class="columns">
+        <div class="column is-8 is-offset-2">
     <div class="extra-pagination">
         {% include "partials/pagination.html" %}
     </div>
 
     {% for article in articles_page.object_list %}
         <article class="post">
-        <div class="inner">
             <header class="post-header">         
-                <h2 class="post-title"><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a>
+                <h2 class="title is-5"><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a>
                 </h2>
                 <span class="post-meta">
                     {% for author in article.authors %}
-                        <a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
+                        <small><a href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a></small>
                     {% endfor %}
-                     | <time datetime="{{ article.locale_date }}">{{ article.locale_date }}</time>
+                     <small><time datetime="{{ article.locale_date }}">{{ article.locale_date }}</time></small>
                 </span>
                 <div class="clear"></div>
             </header>
@@ -32,8 +34,10 @@
                 </section>
             {% endif %}
             {% include 'partials/comments_count.html' %}
-            </div>
         </article>
+        <br>
     {% endfor %}
 
     {% include "partials/pagination.html" %}
+</div>
+</div>
