--- a/nagornyy-theme/templates/index.html
+++ b/nagornyy-theme/templates/index.html
@@ -114,15 +114,15 @@
 			<div class="content">
 				<p class="title is-5 has-text-centered">Contacts</p>
 				<ul>
-					<li>Email: <a href="mailto:nagornyy.o@gmail.com">nagornyy.o@gmail.com</a></li>
-					<li>VK: <a href="https://vk.com/n.oleg">vk.com/n.oleg</a></li>
-					<li>Skype: <a href="skype:nagornyy_oleg?add">nagornyy_oleg</a></li>
-					<li>HSE: <a href="https://www.hse.ru/en/staff/oleg">www.hse.ru/en/staff/oleg</a></li>
-					<li>SPIN-RSCI: <a href="https://elibrary.ru/author_profile.asp?authorid=864928">7196-6711</a></li>
-					<li>ORCID: <a href="http://orcid.org/0000-0002-0892-8212">0000-0002-0892-8212</a></li>
-					<li>ResearcherID: <a href="http://www.researcherid.com/rid/N-8410-2015">N-8410-2015</a></li>
-					<li>Scopus AuthorID: <a href="https://www.scopus.com/authid/detail.uri?partnerID=HzOxMe3b&authorId=57195626249&origin=inward">57195626249</a></li>
-					<li><a href="https://scholar.google.ru/citations?user=fz9W8oMAAAAJ&hl=en&oi=sra">Google Scholar</a></li>
+					<li>Email: <a href="mailto:nagornyy.o@gmail.com" target="_blank">nagornyy.o@gmail.com</a></li>
+					<li>VK: <a href="https://vk.com/n.oleg" target="_blank">vk.com/n.oleg</a></li>
+					<li>Skype: <a href="skype:nagornyy_oleg?add" target="_blank">nagornyy_oleg</a></li>
+					<li>HSE: <a href="https://www.hse.ru/en/staff/oleg" target="_blank">www.hse.ru/en/staff/oleg</a></li>
+					<li>SPIN-RSCI: <a href="https://elibrary.ru/author_profile.asp?authorid=864928" target="_blank">7196-6711</a></li>
+					<li>ORCID: <a href="http://orcid.org/0000-0002-0892-8212" target="_blank">0000-0002-0892-8212</a></li>
+					<li>ResearcherID: <a href="http://www.researcherid.com/rid/N-8410-2015" target="_blank">N-8410-2015</a></li>
+					<li>Scopus AuthorID: <a href="https://www.scopus.com/authid/detail.uri?partnerID=HzOxMe3b&authorId=57195626249&origin=inward" target="_blank">57195626249</a></li>
+					<li><a href="https://scholar.google.ru/citations?user=fz9W8oMAAAAJ&hl=en&oi=sra" target="_blank">Google Scholar</a></li>
 				</ul>
 			</div>
 		</div>
