--- a/nagornyy-theme/templates/base.html
+++ b/nagornyy-theme/templates/base.html
@@ -95,11 +95,8 @@
 		<meta property="og:title" content="{{ SITENAME }}" />
 		<meta property="og:description" content="{{ SITESUBTITLE|default('View the blog.') }}" />
 		<meta property="og:url" content="{{ SITEURL }}" />
-		{% if HEADER_COVER %}
-			<meta property="og:image" content="{{ SITEURL }}/{{ HEADER_COVER }}" />
-		{% else %}
-			<meta name="og:image" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/post-bg.jpg">
-		{% endif %}
+		<meta property="og:image" content="{{ SITEURL }}/theme/img/background-main.jpg" />
+		
 		{% for name,link in SOCIAL if name.lower() in ['facebook'] %}
 			<meta property="article:publisher" content="{{ link }}" />
 		{% endfor %}
@@ -112,7 +109,7 @@
 			<meta name="twitter:description" content="{{ SITESUBTITLE|default('View the blog.') }}">
 			<meta name="twitter:url" content="{{ SITEURL }}">
 				{% if HEADER_COVER %}
-					<meta name="twitter:image:src" content="{{ SITEURL }}/{{ HEADER_COVER }}">
+					<meta name="twitter:image:src" content="{{ SITEURL }}/theme/img/background-main.jpg">
 				{% else %}
 					<meta name="twitter:image:src" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/post-bg.jpg">
 				{% endif %}
