--- a/nagornyy-theme/templates/article.html
+++ b/nagornyy-theme/templates/article.html
@@ -91,7 +91,7 @@
 {% endblock %}
 
 {% block header %}
-		<header id="post-header">
+		<header class="article-header">
 			<div class="content">
 				<div class="columns">
 					<div class="column is-8 is-offset-2">
@@ -109,7 +109,7 @@
 {% block content %}
 
 		<!-- Post content -->
-		<main class="content" role="main">
+		<main class="content article-content" role="main">
 				<div class="columns">
 					<div class="column is-8 is-offset-2">
 			        {% if article.has_summary %}
