--- a/nagornyy-theme/templates/category.html
+++ b/nagornyy-theme/templates/category.html
@@ -27,4 +27,6 @@
     </header>
 {% endblock header %}
 
-{% include "partials/loop.html" %}
+{% block content %}
+  {% include "partials/loop.html" %}
+{% endblock content %}
