--- a/nagornyy-theme/templates/index.html
+++ b/nagornyy-theme/templates/index.html
@@ -2,35 +2,12 @@
 
 {% block header %}
 	<header class="main-header hero is-medium">
-		<nav class="navbar is-transparent">
-			<div class="navbar-brand">
-				<div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
-			</div>
-
-			<div id="navbarExampleTransparentExample" class="navbar-menu">
-				<div class="navbar-end">
-					<a class="navbar-item" href="/category/posts">
-						Blog
-					</a>
-					<a class="navbar-item" href="#contacts">
-						Contacts
-					</a>
-				</div>
-			</div>
-		</nav>
-		<div class="hero-body">
+		<div class="hero-body is-hidden-touch">
 			<div class="container">
 				<div class="columns">
 					<div class="column is-two-fifths-desktop">
 						<div class="my-bio card">
 							<div class="card-content">
-<!-- 								<h1 class="title is-spaced">
-									{{ SITENAME }}
-								</h1> -->
 								<h2 class="subtitle">
 									Hi! I am Oleg Nagornyy — Social researcher, Data analyst and Web-developer from Saint Petersburg, Russia. I'm working as Research assistant and Lecturer at <a href="https://www.hse.ru/en/staff/oleg" target="_blank">HSE</a>. <a href="/pdfs/cv.pdf" target="_blank">Download CV</a>.
 								</h2>
@@ -38,7 +15,15 @@
 						</div>
 					</div>
 				</div>
-
+			</div>
+		</div>
+		<div class="footer is-hidden-desktop">
+			<div class="container">
+				<div class="content has-text-centered">
+					<p>
+						Hi! I am Oleg Nagornyy — Social researcher, Data analyst and Web-developer from Saint Petersburg, Russia. I'm working as Research assistant and Lecturer at <a href="https://www.hse.ru/en/staff/oleg" target="_blank">HSE</a>. <a href="/pdfs/cv.pdf" target="_blank">Download CV</a>.
+					</p>
+				</div>
 			</div>
 		</div>
 	</header>
@@ -61,6 +46,7 @@
 			<div class="posts content">
 				<p class="title is-5">Blog Posts</p>
 				{% include "partials/posts.html" %}
+				<p><a href="/category/posts">See more</a></p>
 			</div>
 		</div>
 		<div class="column">
@@ -112,7 +98,9 @@
 		<a name="contacts">
 		<div class="column contacts">
 			<div class="content">
-				<p class="title is-5 has-text-centered">Contacts</p>
+				<p class="title is-5 has-text-centered is-hidden-touch">Contacts</p>
+				<p class="title is-5 is-hidden-desktop">Contacts</p>
+
 				<ul>
 					<li>Email: <a href="mailto:nagornyy.o@gmail.com" target="_blank">nagornyy.o@gmail.com</a></li>
 					<li>VK: <a href="https://vk.com/n.oleg" target="_blank">vk.com/n.oleg</a></li>
