--- a/nagornyy-theme/templates/partials/posts.html
+++ b/nagornyy-theme/templates/partials/posts.html
@@ -1,9 +1,9 @@
 <div class="papers-list">
  {% for article in articles|sort(attribute='date', reverse=True) if "Posts" == article.category %}
- 	{% if loop.index <= 10 %}
+ 	{% if loop.index <= 12 %}
      <div>
      	<small>{{ article.date.strftime('%-d %B %Y') }}</small>
-     	<a href="{{ SITEURL }}/{{ article.url }}">
+     	<a href="/{{ article.url }}">
      		{{ article.title }}
      	</a>
      	<div>
