--- a/nagornyy-theme/templates/base.html
+++ b/nagornyy-theme/templates/base.html
@@ -7,9 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	{% if GOOGLE_SITE_VERIFICATION %}
-	<meta name="google-site-verification" content="{{ GOOGLE_SITE_VERIFICATION }}">
-	{% endif %}
+	<meta name="google-site-verification" content="xH5va-Q3lKPKE-R_6Eum-flGjhXIO4yISWWaqFiOXzI">
+	<meta name="yandex-verification" content="b53dc04c66d0d4e1" />
 
 	{% assets filters="sass,cssmin", output="css/style.min.css", "sass/styles.sass" %}
 		<link rel="stylesheet" href="{{ SITEURL }}/{{ ASSET_URL }}">
@@ -135,6 +134,33 @@
 	</footer>
 
 	<script type="text/javascript" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/js/script.js"></script>
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+
+  // Get all "navbar-burger" elements
+  var $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+  // Check if there are any navbar burgers
+  if ($navbarBurgers.length > 0) {
+
+    // Add a click event on each of them
+    $navbarBurgers.forEach(function ($el) {
+      $el.addEventListener('click', function () {
+
+        // Get the target from the "data-target" attribute
+        var target = $el.dataset.target;
+        var $target = document.getElementById(target);
+
+        // Toggle the class on both the "navbar-burger" and the "navbar-menu"
+        $el.classList.toggle('is-active');
+        $target.classList.toggle('is-active');
+
+      });
+    });
+  }
+
+});
+</script>
 	
 	{% if JS_OVERRIDE %}
 		<!-- Script specified by the user -->
