--- a/nagornyy-theme/templates/index.html
+++ b/nagornyy-theme/templates/index.html
@@ -54,8 +54,8 @@
 				<p class="title is-5">Education</p>
 				<ul>
 					<li>2017–2020 Full-time Advanced Doctoral Programme in Social Sciences.</li>
-					<li>2015—2017 Master in Sociology Higher School of Economics.</li>
-					<li>2010—2015 Diploma in Sociology Omsk State University.</li>
+					<li>2015–2017 Master in Sociology Higher School of Economics.</li>
+					<li>2010–2015 Diploma in Sociology Omsk State University.</li>
 				</ul>
 			</div>
 			<div class="additional-education content">
