--- a/nagornyy-theme/templates/base.html
+++ b/nagornyy-theme/templates/base.html
@@ -64,24 +64,6 @@
 			{% endif %}
 	{% endfor %}
 
-	<!-- Code highlight color scheme -->
-	{% if COLOR_SCHEME_CSS %}
-			<link href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/code_blocks/{{ COLOR_SCHEME_CSS }}" rel="stylesheet">
-	{% else %}
-			<link href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/code_blocks/github.css" rel="stylesheet">
-	{% endif %}
-
-	{% if CSS_OVERRIDE %}
-		<!-- CSS specified by the user -->
-		{% for css in CSS_OVERRIDE %}
-		<link href="{{ SITEURL }}/{{ css }}" type="text/css" rel="stylesheet" />
-		{% endfor %}
-	{% endif %}
-
-	<!-- Custom fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,300' rel='stylesheet' type='text/css' />
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css" />
-
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -91,82 +73,49 @@
 	{% endblock head %}
 
 	{% block opengraph %}
-		{% for admin in FACEBOOK_ADMINS %}
-			<meta property="fb:admins" content="{{ admin }}" />
-		{% endfor %}
-		{% for LOC in LOCALE %}
-			<meta property="og:locale" content="{{ LOC }}" />
-		{% endfor %}
+		<meta property="fb:admins" content="100002320261122"/>
+		<meta property="og:locale" content="en_US" />
 		<meta property="og:site_name" content="{{ SITENAME }}" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="{{ SITENAME }}" />
-		<meta property="og:description" content="{{ SITESUBTITLE|default('View the blog.') }}" />
-		<meta property="og:url" content="{{ SITEURL }}" />
-		<meta property="og:image" content="{{ SITEURL }}/theme/img/background-main.jpg" />
-
-		{% for name,link in SOCIAL if name.lower() in ['facebook'] %}
-			<meta property="article:publisher" content="{{ link }}" />
-		{% endfor %}
+		<meta property="og:description" content="My personal website" />
+		<meta property="og:url" content="http://nagornyy.me" />
+		<meta property="og:image" content="http://nagornyy.me/theme/img/background-main.jpg" />
 	{% endblock opengraph %}
-	{% block twitter_card %}
-		{% for name,link in SOCIAL if name.lower() in ['twitter'] %}
-			<meta name="twitter:card" content="summary_large_image">
-			<meta name="twitter:site" content="@{{ link|replace('http://', 'https://')|replace('https://twitter.com/', '') }}">
-			<meta name="twitter:title" content="{{ SITENAME }}">
-			<meta name="twitter:description" content="{{ SITESUBTITLE|default('View the blog.') }}">
-			<meta name="twitter:url" content="{{ SITEURL }}">
-				{% if HEADER_COVER %}
-					<meta name="twitter:image:src" content="{{ SITEURL }}/theme/img/background-main.jpg">
-				{% else %}
-					<meta name="twitter:image:src" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/post-bg.jpg">
-				{% endif %}
-		{% endfor %}
-	{% endblock twitter_card %}
+
 </head>
 <!-- TODO : Body class -->
 <body>
 	{% include "partials/navigation.html" %}
 	{% block header %}{% endblock header %}
 	{% block content %}{% endblock content %}
-	
-	<footer id="footer">
 
-	</footer>
+	<script>
+	document.addEventListener('DOMContentLoaded', function () {
 
-	<script type="text/javascript" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/js/script.js"></script>
-<script>
-document.addEventListener('DOMContentLoaded', function () {
+		// Get all "navbar-burger" elements
+		var $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
 
-  // Get all "navbar-burger" elements
-  var $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+		// Check if there are any navbar burgers
+		if ($navbarBurgers.length > 0) {
 
-  // Check if there are any navbar burgers
-  if ($navbarBurgers.length > 0) {
+			// Add a click event on each of them
+			$navbarBurgers.forEach(function ($el) {
+				$el.addEventListener('click', function () {
 
-    // Add a click event on each of them
-    $navbarBurgers.forEach(function ($el) {
-      $el.addEventListener('click', function () {
+					// Get the target from the "data-target" attribute
+					var target = $el.dataset.target;
+					var $target = document.getElementById(target);
 
-        // Get the target from the "data-target" attribute
-        var target = $el.dataset.target;
-        var $target = document.getElementById(target);
+					// Toggle the class on both the "navbar-burger" and the "navbar-menu"
+					$el.classList.toggle('is-active');
+					$target.classList.toggle('is-active');
 
-        // Toggle the class on both the "navbar-burger" and the "navbar-menu"
-        $el.classList.toggle('is-active');
-        $target.classList.toggle('is-active');
+				});
+			});
+		}
 
-      });
-    });
-  }
-
-});
-</script>
-	
-	{% if JS_OVERRIDE %}
-		<!-- Script specified by the user -->
-		{% for js in JS_OVERRIDE %}
-		<script type="text/javascript"	src="{{ SITEURL }}/{{ js }}"></script>
-		{% endfor %}
-	{% endif %}
+	});
+	</script>
 </body>
 </html>
