--- a/nagornyy-theme/templates/article.html
+++ b/nagornyy-theme/templates/article.html
@@ -2,63 +2,65 @@
 {% block title %}{{ article.title }}{% endblock %}
 
 {% block head %}
-		{% if not article.without_css %}
-		{{ super() }}
-		{% endif %}
+	{# Свойстве without_css следует использовать в jupyter notebooks, чтобы не плыла верстка #}
+	{% if not article.without_css %}
+		{{ super() }} 
+	{% endif %}
 
-		<link href="{{ SITEURL }}/{{ article.url }}" rel="canonical" />
-		{% for keyword in article.keywords %}
-				<meta name="keywords" content="{{keyword}}" >
-		{% endfor %}
+	<link href="{{ SITEURL }}/{{ article.url }}" rel="canonical" />
 
-		{% if description %}
-				<meta name="description" content="{{ description }}">
-		{% elif article.headline %}
-				<meta name="description" content="{{ article.headline }}">
-		{% elif article.summary %}
-				<meta name="description" content="{{ article.summary|striptags|truncate(140) }}">
-		{% endif %}
+	{% for keyword in article.keywords %}
+			<meta name="keywords" content="{{keyword}}" >
+	{% endfor %}
 
-		{% for author in article.authors %}
-				<meta name="author" content="{{ author }}">
-		{% endfor %}
+	{% if description %}
+			<meta name="description" content="{{ description }}">
+	{% elif article.headline %}
+			<meta name="description" content="{{ article.headline }}">
+	{% elif article.summary %}
+			<meta name="description" content="{{ article.summary|striptags|truncate(140) }}">
+	{% endif %}
 
-		{% for tag in article.tags %}
-				<meta name="tags" content="{{tag}}">
-		{% endfor %}
+	{% for author in article.authors %}
+			<meta name="author" content="{{ author }}">
+	{% endfor %}
+
+	{% for tag in article.tags %}
+			<meta name="tags" content="{{tag}}">
+	{% endfor %}
 {% endblock %}
 
 
 {% block opengraph %}
 	{{ super() }}
 	<meta property="og:type" content="article">
-				{% for author in article.authors %}
-						<meta property="article:author" content="{{ SITEURL }}/{{ author.url }}">
-				{% endfor %}
+	{% for author in article.authors %}
+			<meta property="article:author" content="{{ SITEURL }}/{{ author.url }}">
+	{% endfor %}
 	<meta property="og:url" content="{{ SITEURL }}/{{ article.url }}">
 	<meta property="og:title" content="{{ article.title }}">
 	<meta property="article:published_time" content="{{ article.date }}">
-				{% if description %}
-						<meta property="og:description" content="{{ description }}">
-				{% elif article.headline %}
-						<meta property="og:description" content="{{ article.headline }}">
-				{% elif article.summary %}
-						<meta property="og:description" content="{{ article.summary|striptags|truncate(140) }}">
-				{% endif %}
+	{% if description %}
+		<meta property="og:description" content="{{ description }}">
+	{% elif article.headline %}
+		<meta property="og:description" content="{{ article.headline }}">
+	{% elif article.summary %}
+		<meta property="og:description" content="{{ article.summary|striptags|truncate(140) }}">
+	{% endif %}
 
-				{% if article.og_image %}
-						{% if article.og_image|lower|truncate(4, True, '') == "http" %}
-								<meta property="og:image" content="{{ article.og_image }}">
-						{% else %}
-								<meta property="og:image" content="{{ SITEURL }}/{{ article.og_image }}">
-						{% endif %}
-				{% elif article.header_cover %}
-						<meta property="og:image" content="{{ SITEURL }}/{{ article.header_cover }}">
-				{% elif HEADER_COVER %}
-						<meta property="og:image" content="{{ SITEURL }}/{{ HEADER_COVER }}">
-				{% else %}
-						<meta property="og:image" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/post-bg.jpg">
-				{% endif %}
+	{% if article.og_image %}
+		{% if article.og_image|lower|truncate(4, True, '') == "http" %}
+				<meta property="og:image" content="{{ article.og_image }}">
+		{% else %}
+				<meta property="og:image" content="{{ SITEURL }}/{{ article.og_image }}">
+		{% endif %}
+	{% elif article.header_cover %}
+			<meta property="og:image" content="{{ SITEURL }}/{{ article.header_cover }}">
+	{% elif HEADER_COVER %}
+			<meta property="og:image" content="{{ SITEURL }}/{{ HEADER_COVER }}">
+	{% else %}
+			<meta property="og:image" content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/post-bg.jpg">
+	{% endif %}
 {% endblock %}
 
 {% block header %}
@@ -87,8 +89,6 @@
 						<section class="summary">
 							<strong>{{ article.summary }}</strong>
 						</section>
-			        {% elif article.summary %}
-			        
 			        {% endif %}
 						<section class="article">
 							{{article.content}}
