--- a/nagornyy-theme/templates/index.html
+++ b/nagornyy-theme/templates/index.html
@@ -30,8 +30,7 @@
 {% endblock header %}
 
 {% block content %}
-	
-<!-- 	{% include "partials/loop.html" %} -->
+
 <section class="section main-content">
 	<div class="columns">
 		<div class="column is-three-fifths">
@@ -95,11 +94,9 @@
 		</div>
 	</div>
 	<div class="columns">
-		<a name="contacts">
 		<div class="column contacts">
 			<div class="content">
-				<p class="title is-5 has-text-centered is-hidden-touch">Contacts</p>
-				<p class="title is-5 is-hidden-desktop">Contacts</p>
+				<p class="title is-5" name="contacts">Contacts</p>
 
 				<ul>
 					<li>Email: <a href="mailto:nagornyy.o@gmail.com" target="_blank">nagornyy.o@gmail.com</a></li>
@@ -114,7 +111,6 @@
 				</ul>
 			</div>
 		</div>
-		</a>
 	</div>
 </section>
 </div>
