--- a/nagornyy-theme/templates/article.html
+++ b/nagornyy-theme/templates/article.html
@@ -98,7 +98,7 @@
 							{% if article.tags %}
 							<div class="tags">
 									{% for tag in article.tags %}
-									<a class="tag" href="{{ SITEURL }}/{{ tag.url }}">{{ tag | escape }}</a>
+									<a class="tag" href="/{{ tag.url }}">{{ tag | escape }}</a>
 										{% if not loop.last %}
 										{% endif %}
 									{% endfor %}
@@ -114,7 +114,7 @@
 									{% else %}
 									var disqus_identifier = '/{{ article.url }}';
 									{% endif %}
-									var disqus_url = '{{ SITEURL }}/{{ article.url }}';
+									var disqus_url = '/{{ article.url }}';
 							</script>
 							<noscript>Please enable JavaScript to view the comments.</noscript>									
 							<section class="post-comments">
@@ -129,7 +129,7 @@
 
 							<aside class="post-nav">
 									{% if article.next_article %}
-									<a class="post-nav-next" href="{{ SITEURL }}/{{ article.next_article.url}}">
+									<a class="post-nav-next" href="/{{ article.next_article.url}}">
 											<section class="post-nav-teaser">
 													<i class="ic ic-arrow-left"></i>
 															<h2 class="post-nav-title">{{ article.next_article.title }}</h2>
@@ -138,7 +138,7 @@
 									</a>
 									{% endif %}
 									{% if article.prev_article %}
-									<a class="post-nav-prev" href="{{ SITEURL }}/{{ article.prev_article.url}}">
+									<a class="post-nav-prev" href="/{{ article.prev_article.url}}">
 											<section class="post-nav-teaser">
 													<i class="ic ic-arrow-right"></i>
 															<h2 class="post-nav-title">{{ article.prev_article.title }}</h2>
