--- a/nagornyy-theme/templates/category.html
+++ b/nagornyy-theme/templates/category.html
@@ -3,30 +3,15 @@
 {% block title %}{{ SITENAME }} - Articles in the {{ category }} category{% endblock %}
 
 {% block header %}
-    <!-- Page Header -->
-    <!-- Set your background image for this header on the line below. -->
-    <header id="blog-header" class="has-cover">
-      <div class="inner">
-        <nav id="navigation">
-          {% if SITE_LOGO %}
-            <span class="blog-logo">
-                <a href="{{ SITEURL }}"><img src="{{SITE_LOGO}}" alt="Blog Logo" /></a>
-            </span>
-          {% else %}
-            <span id="home-button" class="nav-button">
-                <a class="home-button" href="{{ SITEURL }}" title="Home"><i class="ic ic-arrow-left"></i> Home</a>
-            </span>
-          {% endif %}
-          <span id="menu-button" class="nav-button">
-            <a class="menu-button"><i class="ic ic-menu"></i> Menu</a>
-          </span>
-        </nav>
-        <h1 class="post-title">Category {{ category }}</h1>
-        <span class="blog-description">Posts: {{ articles|count }}</span>
-      </div>
-    </header>
-{% endblock header %}
+<header id="blog-header">
+	<div class="columns">
+		<div class="column is-8 is-offset-2">
+			<h1 class="post-title">Category {{ category }}</h1>
+			<span class="blog-description">Posts: {{ articles|count }}</span>
+		</div>
+	</div>
+</header>{% endblock header %}
 
 {% block content %}
-  {% include "partials/loop.html" %}
+	{% include "partials/loop.html" %}
 {% endblock content %}
