--- a/nagornyy-theme/templates/index.html
+++ b/nagornyy-theme/templates/index.html
@@ -42,10 +42,15 @@
 				<p class="title is-5">Courses</p>
 				{% include "partials/courses.html" %}
 			</div>
-			<div class="posts content">
-				<p class="title is-5">Blog Posts</p>
-				{% include "partials/posts.html" %}
-				<p><a href="/category/posts">See more</a></p>
+			<div class="conferences content">
+				<p class="title is-5">Conferences</p>
+				<ul>
+					<li>European Symposium Series on Societal Challenges in Computational Social Science (London). Presentation: Ethnic Discussions in Russian-language Social Media: Representation of Ethnicities and Judgment Analysis.</li>
+					<li>Digital Transformations & Global Society 2017 (DTGS’17) (Санкт-Петербург). Presentations: 1) Detecting interethnic relations with the data from social media; 2) Digital Inequality in Russia through the Use of Social Network Site: A Cross-Regional Comparison.</li>
+					<li>International Student Research Conference, National Research University Higher School of Economics (Санкт-Петербург). Presentation: Social problems detection in online-media.</li>
+					<li>VII Международная научно-практическая конференция памяти А.О. Крыштановского «Методы и процедуры социологических исследований» (Москва). Presentation: Возможности и ограничения метода тематического моделирования в социологических исследованиях.</li>
+					<li>IV Международная научная конференция "Математическое и компьютерное моделирование" (Омск). Presentation: Исследование дискурса о биопедагогике при помощи тематического моделирования и синтаксического анализа текстов.</li>
+				</ul>		
 			</div>
 		</div>
 		<div class="column">
@@ -70,16 +75,7 @@
 					<li>A. Casilli's workshop “Digital Methods: How to Study Online Social Interactions”, 9–10 December 2015, St. Petersburg, Russia.</li>
 				</ul>		
 			</div>
-			<div class="conferences content">
-				<p class="title is-5">Conferences</p>
-				<ul>
-					<li>European Symposium Series on Societal Challenges in Computational Social Science (London). Presentation: Ethnic Discussions in Russian-language Social Media: Representation of Ethnicities and Judgment Analysis.</li>
-					<li>Digital Transformations & Global Society 2017 (DTGS’17) (Санкт-Петербург). Presentations: 1) Detecting interethnic relations with the data from social media; 2) Digital Inequality in Russia through the Use of Social Network Site: A Cross-Regional Comparison.</li>
-					<li>International Student Research Conference, National Research University Higher School of Economics (Санкт-Петербург). Presentation: Social problems detection in online-media.</li>
-					<li>VII Международная научно-практическая конференция памяти А.О. Крыштановского «Методы и процедуры социологических исследований» (Москва). Presentation: Возможности и ограничения метода тематического моделирования в социологических исследованиях.</li>
-					<li>IV Международная научная конференция "Математическое и компьютерное моделирование" (Омск). Presentation: Исследование дискурса о биопедагогике при помощи тематического моделирования и синтаксического анализа текстов.</li>
-				</ul>		
-			</div>
+
 			<div class="awards content">
 				<p class="title is-5">Awards</p>
 				<ul>
@@ -94,10 +90,17 @@
 		</div>
 	</div>
 	<div class="columns">
-		<div class="column contacts">
+		<div class="column">
+			<div class="posts content">
+				<p class="title is-5"><a href="/category/posts">Blog Posts</a></p>
+				{% include "partials/posts.html" %}
+			</div>
+		</div>
+	</div>
+	<div class="columns">
+		<div class="column contacts" id="contacts">
 			<div class="content">
-				<p class="title is-5" name="contacts">Contacts</p>
-
+				<p class="title is-5">Contacts</p>
 				<ul>
 					<li>Email: <a href="mailto:nagornyy.o@gmail.com" target="_blank">nagornyy.o@gmail.com</a></li>
 					<li>VK: <a href="https://vk.com/n.oleg" target="_blank">vk.com/n.oleg</a></li>
