--- a/nagornyy-theme/static/sass/styles.sass
+++ b/nagornyy-theme/static/sass/styles.sass
@@ -25,6 +25,11 @@ $body-size: 18px
 .main-content
 	box-shadow: 1px -8px 5px 0 rgba(0,0,0,0.1)
 
+	
+	@media only screen and (min-width: 1215px)
+		.main-block
+			padding: 10px 20px
+
 	.contacts
 		ul 
 			columns: 2
@@ -41,8 +46,11 @@ $body-size: 18px
 			margin-bottom: 0.7rem
 
 	.posts
-		background-color: #efefef
+		background-image: linear-gradient(141deg,#e8e5e6 0,whitesmoke 71%,white 100%)
 		padding: 30px
+
+		@media only screen and (max-width: 768px)
+			margin: 0px -1.5rem
 
 ul.posts-list
 	columns: 2
