--- a/nagornyy-theme/templates/index.html
+++ b/nagornyy-theme/templates/index.html
@@ -34,15 +34,15 @@
 <section class="section main-content">
 	<div class="columns">
 		<div class="column is-three-fifths">
-			<div class="papers content">
+			<div class="papers content main-block">
 				<p class="title is-5">Research papers</p>
 				{% include "partials/papers.html" %}
 			</div>
-			<div class="courses content">
+			<div class="courses content main-block">
 				<p class="title is-5">Courses</p>
 				{% include "partials/courses.html" %}
 			</div>
-			<div class="conferences content">
+			<div class="conferences content main-block">
 				<p class="title is-5">Conferences</p>
 				<ul>
 					<li>European Symposium Series on Societal Challenges in Computational Social Science (London). Presentation: Ethnic Discussions in Russian-language Social Media: Representation of Ethnicities and Judgment Analysis.</li>
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 		<div class="column">
-			<div class="education content">
+			<div class="education content main-block">
 				<p class="title is-5">Education</p>
 				<ul>
 					<li>2017–2020 Full-time Advanced Doctoral Programme in Social Sciences.</li>
@@ -62,7 +62,7 @@
 					<li>2010–2015 Diploma in Sociology Omsk State University.</li>
 				</ul>
 			</div>
-			<div class="additional-education content">
+			<div class="additional-education content main-block">
 				<p class="title is-5">Additional Education</p>
 				<ul>
 					<div class="year-div">2017</div>
@@ -76,7 +76,7 @@
 				</ul>		
 			</div>
 
-			<div class="awards content">
+			<div class="awards content main-block">
 				<p class="title is-5">Awards</p>
 				<ul>
 					<li>Oxford Russian Fund scholarship for MA students (2015–2016, 2016–2017).</li>
@@ -91,7 +91,7 @@
 	</div>
 	<div class="columns">
 		<div class="column">
-			<div class="posts content">
+			<div class="posts content main-block">
 				<p class="title is-5"><a href="/category/posts">Blog Posts</a></p>
 				{% include "partials/posts.html" %}
 			</div>
@@ -99,7 +99,7 @@
 	</div>
 	<div class="columns">
 		<div class="column contacts" id="contacts">
-			<div class="content">
+			<div class="content main-block">
 				<p class="title is-5">Contacts</p>
 				<ul>
 					<li>Email: <a href="mailto:nagornyy.o@gmail.com" target="_blank">nagornyy.o@gmail.com</a></li>
