увеличил header on the main page

--- a/nagornyy-theme/static/sass/styles.sass
+++ b/nagornyy-theme/static/sass/styles.sass
@@ -13,6 +13,9 @@ $body-size: 18px
 	background-size: cover
 	margin-top: -3.25rem
 
+	&>.hero-body
+		padding-top: 14rem
+
 	.my-bio
 		background-color: rgba(255, 255, 255, 0.85)
 		box-shadow: 0 2px 3px rgba(10, 10, 10, 0.05), 0 0 0 1px rgba(10,10,10,0.05)
