увеличил header on the main page

--- a/nagornyy-theme/static/sass/styles.sass
+++ b/nagornyy-theme/static/sass/styles.sass
@@ -8,12 +8,12 @@ $body-size: 18px
 .navbar
 	background-color: transparent
 
-.main-header
+.hero.main-header
 	background-image: url("/theme/img/background-main.jpg")
 	background-size: cover
 	margin-top: -3.25rem
 
-	&>.hero-body
+	& > .hero-body
 		padding-top: 14rem
 
 	.my-bio
